# langfuse-runnable-config-builder

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
langfuse_runnable_config/: __init__.py
langfuse_runnable_config/factories/: __init__.py  simple.py  truncating.py
langfuse_runnable_config/internal/: __init__.py  constants.py
langfuse_runnable_config/internal/handlers/: __init__.py  base.py  factory.py  simple.py  v2.py  v3.py
langfuse_runnable_config/internal/serializers/: __init__.py  truncator.py
langfuse_runnable_config/internal/strategies/: __init__.py  simple.py  truncating.py
langfuse_runnable_config/internal/version/: __init__.py  detector.py
langfuse_runnable_config/settings/: __init__.py  simple.py  truncating.py
tests/: __init__.py  test_factories.py  test_serializers.py  test_settings.py
