[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langfuse-runnable-config"
version = "0.1.0"
description = "Утилита для создания RunnableConfig с Langfuse callbacks. Автоматически определяет версию Langfuse и настраивает callbacks с опциональной обрезкой данных."
readme = "README.md"
requires-python = ">=3.8.1"
license = {text = "MIT"}
authors = [
    {name = "v.skurikhin", email = "skurikhinvladimir1998@gmail.com"}
]
keywords = ["langfuse", "langchain", "tracing", "observability", "llm", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/SkurikhinVladimir/langfuse-runnable-config-builder"
Documentation = "https://github.com/SkurikhinVladimir/langfuse-runnable-config-builder#readme"
Repository = "https://github.com/SkurikhinVladimir/langfuse-runnable-config-builder"
Issues = "https://github.com/SkurikhinVladimir/langfuse-runnable-config-builder/issues"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
langfuse_runnable_config = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
